# yapcap

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  com.topi.YapCap.json  install  install.sh  justfile
.github/workflows/: ci.yml  release.yml
docs/: TODO.md  current-plan.md  cursor-provider-refactor-plan.md  fixtures-claude.md  fixtures-codex.md  fixtures-cursor.md  manual-testing.md  qa.md  refactor-plan.md  release-strategy.md  release-v0.4.0-cosmic-store.md  spec.md  todo.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
fixtures/browser/: README.md  chromium_cookies.sql  firefox_cookies.sql
fixtures/claude/: error_401.json  oauth_token_refresh_with_identity.json  oauth_token_response.json  oauth_usage_response.json  probe.py  usage_cli.txt  usage_oauth.json  usage_oauth_extra_disabled.json  usage_oauth_live_2026_04_20.json  usage_oauth_max_2026_03_10.json  web_account.json  web_organizations.json  web_usage.json
fixtures/claude-oauth-probe/: README.md  findings.md  probe.py
fixtures/claude-oauth-probe/captures/: broad-separate.json  broad-verifier.json  minimal-separate.json  minimal-verifier.json
fixtures/codex/: error_401.json  oauth_token_response.json  oauth_usage_response.json  probe.py  usage_cli.txt  usage_oauth.json  usage_rpc.json
fixtures/cursor/: auth_me.json  auth_me_response.json  error_401.json  oauth_token_response.json  probe.py  stripe_profile.json  token_refresh.json  usage_summary.json  usage_summary_response.json
fixtures/cursor-probe/: probe.py
fixtures/gemini/: load_code_assist_response.json  oauth_token_400_response.json  oauth_token_response.json  probe.py  retrieve_user_quota_response.json
i18n/en/: yapcap.ftl
issues/gemini-provider/: progress.txt
issues/gemini-provider/issues/: 003-oauth-login-add-account.md  004-token-refresh-remove-account.md  008-docs-fixtures.md
issues/qa-release-polish/: progress.txt
issues/qa-release-polish/issues/: 001-fresh-cosmic-config-schema.md
packaging/: cargo-sources.json  com.topi.YapCap.json  io.github.TopiCsarno.YapCap.json
resources/: app-debug.desktop  app.desktop  app.metainfo.xml  com.topi.YapCap.desktop
scripts/: ralph-afk.sh  ralph-prompt.md  update-readme-screenshot.sh
src/: account_selection.rs  app.rs  app_refresh.rs  app_state.rs  auth.rs  browser.rs  cache.rs  config.rs  cosmic_app.rs  currency_format.rs  debug_env.rs  demo_env.rs  error.rs  file_watcher.rs  i18n.rs  lib.rs  logging.rs  main.rs  model.rs  popup_view.rs  provider_assets.rs  runtime.rs  test_support.rs  updates.rs  usage_display.rs
src/account_storage/: mod.rs  tests.rs
src/app/: applet.rs  host_auth_watch.rs  login.rs  mod.rs  popup_view.rs  provider_actions.rs  provider_assets.rs  refresh.rs  state.rs  tests.rs  window.rs
src/app/popup_view/: badges.rs  detail.rs  measure.rs  settings.rs
src/app/popup_view/settings/: accounts.rs  general.rs
src/app/popup_view/settings/accounts/: login_controls.rs  rows.rs
src/providers/: adapters.rs  claude.rs  claude_cli.rs  claude_refresh.rs  claude_web.rs  codex.rs  cursor.rs  interface.rs  mod.rs  registry.rs
src/providers/adapters/: claude_adapter.rs  codex_adapter.rs  cursor_adapter.rs  gemini_adapter.rs
src/providers/claude/: account.rs  host_session.rs  login.rs  mod.rs  oauth.rs  refresh.rs
src/providers/claude/account/: tests.rs
src/providers/codex/: account.rs  login.rs  mod.rs  oauth.rs  refresh.rs  tests.rs
src/providers/cursor/: active.rs  debug.rs  discovery.rs  identity.rs  login.rs  maintenance.rs  mod.rs  refresh.rs  scan.rs  shared.rs  storage.rs  types.rs
src/providers/gemini/: account.rs  buckets.rs  code_assist.rs  host_session.rs  id_token.rs  login.rs  mod.rs  oauth.rs  plan_label.rs
src/providers/registry/: tests.rs
tests/: browser_fixtures.rs  flatpak_manifest.rs
