[package]
name = "yapcap"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "COSMIC panel applet for Codex, Claude Code, and Cursor usage"
repository = "https://github.com/TopiCsarno/yapcap"
default-run = "yapcap-cosmic"

[package.metadata.deb]
name = "yapcap"
maintainer = "Topi Csarno <TopiCsarno@users.noreply.github.com>"
depends = "$auto, libxkbcommon0, libwayland-client0, libfontconfig1"
section = "utils"
priority = "optional"
assets = [
    ["target/release/yapcap-cosmic", "usr/bin/", "755"],
    ["resources/com.topi.YapCap.desktop", "usr/share/applications/", "644"],
    ["resources/icon.svg", "usr/share/icons/hicolor/scalable/apps/com.topi.YapCap.svg", "644"],
    ["README.md", "usr/share/doc/yapcap/README.md", "644"],
]
extended-description = """
YapCap is a native COSMIC panel applet that surfaces local usage limits for \
Codex, Claude Code, and Cursor by reading locally available OAuth tokens \
and browser session cookies.
"""

[lib]
name = "yapcap"
path = "src/lib.rs"

[[bin]]
name = "yapcap-cosmic"
path = "src/bin/yapcap-cosmic.rs"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
cbc = "0.1.2"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
secret-service = { version = "5.1.0", features = ["rt-tokio-crypto-rust"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
pbkdf2 = "0.12.2"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "time"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "tokio",
    "wayland",
    "winit",
]
