[package]
name = "yapcap"
version = "0.4.0"
edition = "2024"
license = "MPL-2.0"
description = "COSMIC panel applet for Codex, Claude Code, and Cursor usage"
repository = "https://github.com/TopiCsarno/yapcap"

[package.metadata.deb]
name = "yapcap"
maintainer = "Topi Csarno <TopiCsarno@users.noreply.github.com>"
depends = "$auto, libxkbcommon0, libwayland-client0, libfontconfig1"
section = "utils"
priority = "optional"
assets = [
    ["target/release/yapcap", "usr/bin/", "755"],
    ["resources/app.desktop", "usr/share/applications/com.topi.YapCap.desktop", "644"],
    ["resources/icon.svg", "usr/share/icons/hicolor/scalable/apps/com.topi.YapCap.svg", "644"],
    ["README.md", "usr/share/doc/yapcap/README.md", "644"],
]
extended-description = """
YapCap is a native COSMIC panel applet that surfaces local usage limits for \
Codex, Claude Code, and Cursor by reading locally available OAuth tokens \
and browser session cookies.
"""

[package.metadata.generate-rpm]
summary = "COSMIC panel applet for Codex, Claude Code, and Cursor usage"
license = "MPL-2.0"
assets = [
    { source = "target/release/yapcap", dest = "/usr/bin/yapcap", mode = "755" },
    { source = "resources/app.desktop", dest = "/usr/share/applications/com.topi.YapCap.desktop", mode = "644" },
    { source = "resources/icon.svg", dest = "/usr/share/icons/hicolor/scalable/apps/com.topi.YapCap.svg", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/yapcap/README.md", mode = "644", doc = true },
]

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
i18n-embed-fl = "0.10"
libc = "0.2"
notify = "8"
pbkdf2 = "0.12"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust-embed = "8.7.2"
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha1 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Applet support
    "applet",
    "applet-token",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Add Wayland support to winit
    "wayland",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
